# WatIsQ2

./: .gitignore  .gitmodules  README.md
baseq2/gui/: demo.rml
src/: CMakeCache.txt  CMakeLists.txt
src/cgame/: cg_api.cpp  cg_api.h  cg_decals.cpp  cg_entities.c  cg_hud.cpp  cg_inventory.cpp  cg_loadscreen.cpp  cg_localents.c  cg_localents.cpp  cg_location.c  cg_location.cpp  cg_main.cpp  cg_mapeffects.cpp  cg_media.cpp  cg_muzzleflash.cpp  cg_parse.c  cg_parse.cpp  cg_parteffects.c  cg_partgloom.c  cg_particles.cpp  cg_partsustain.c  cg_partthink.c  cg_parttrail.cpp  cg_players.cpp  cg_predict.cpp  cg_screen.c  cg_screen.cpp  cg_shared.h  cg_tempents.cpp  cg_view.c  cg_view.cpp  cg_weapon.cpp  pmove.c
src/cgame/gmenu/: menu_id_1.c  menu_id_1.cpp
src/cgame/menu/: m_main.cpp  m_mp.c  m_mp_downloading.c  m_mp_join.cpp  m_mp_join_addrbook.cpp  m_mp_player.c  m_mp_player.cpp  m_mp_start.c  m_mp_start.cpp  m_mp_start_dmflags.c  m_opts.cpp  m_opts_controls.c  m_opts_controls.cpp  m_opts_effects.c  m_opts_gloom.cpp  m_opts_hud.cpp  m_opts_input.cpp  m_opts_misc.c  m_opts_misc.cpp  m_opts_screen.c  m_opts_sound.c  m_quit.cpp  m_sp.c  m_sp_credits.cpp  m_sp_loadgame.cpp  m_sp_savegame.cpp  m_vid.c  m_vid_exts.c  m_vid_settings.cpp  menu.c
src/cgame/ui/: ui_backend.cpp  ui_cursor.cpp  ui_draw.cpp  ui_items.cpp  ui_keys.cpp
src/client/: cl_acapi.c  cl_cgapi.c  cl_cgapi.cpp  cl_cin.cpp  cl_console.c  cl_console.cpp  cl_demo.cpp  cl_download.c  cl_input.c  cl_keys.c  cl_keys.cpp  cl_keys.h  cl_local.h  cl_main.cpp  cl_parse.cpp  cl_rmlui.cpp  cl_screen.cpp  gui_cursor.c  gui_events.c  gui_init.cpp  gui_local.h  gui_main.c  gui_vars.c  sdl_glimp.c  sdl_glimp.cpp  sdl_glimp.h  sdl_main.c  sdl_main.cpp  sdl_main.h  snd_dma.c  snd_dma.cpp  snd_local.h  snd_main.c  snd_main.cpp  snd_openal.cpp  snd_sdl.c  snd_sdl.cpp
src/common/: alias.cpp  cbuf.cpp  cm_q2_main.cpp  cm_q2_trace.c  cm_q3_main.cpp  cm_q3_patch.cpp  cm_q3_trace.cpp  cmd.cpp  cmd.h  common.c  common.cpp  common.h  cvar.c  cvar.cpp  files.c  files.cpp  memory.cpp  net_chan.cpp  net_msg.c  net_msg.cpp  parse.c  protocol.h
src/game/: g_ai.cpp  g_chase.cpp  g_cmds.cpp  g_combat.cpp  g_func.cpp  g_items.cpp  g_local.h  g_main.cpp  g_menus.c  g_menus.cpp  g_misc.cpp  g_monster.cpp  g_phys.cpp  g_save.c  g_save.cpp  g_spawn.c  g_spawn.cpp  g_svcmds.cpp  g_turret.cpp  g_utils.cpp  g_weapon.cpp  game.h  m_actor.cpp  m_berserk.cpp  m_boss2.cpp  m_boss31.cpp  m_boss32.cpp  m_brain.cpp  m_chick.cpp  m_flipper.cpp  m_float.cpp  m_flyer.cpp  m_gladiator.cpp  m_gunner.cpp  m_hover.cpp  m_infantry.cpp  m_insane.cpp  m_medic.cpp  m_move.cpp  m_mutant.cpp  (+9 more)
src/renderer/: r_local.h  r_math.cpp  r_public.h  rb_entity.cpp  rb_gl.cpp  rb_gl.h  rb_light.cpp  rb_qgl.c  rb_qgl.cpp  rb_qgl.h  rb_render.c  rb_render.cpp  rb_shadow.cpp  rb_state.c  rb_state.cpp  rf_2d.c  rf_alias.cpp  rf_cull.c  rf_decal.cpp  rf_font.cpp  rf_image.c  rf_image.cpp  rf_image.h  rf_init.c  rf_init.cpp  rf_light.c  rf_light.cpp  rf_main.cpp  rf_material.c  rf_material.cpp  rf_meshbuffer.cpp  rf_model.cpp  rf_program.cpp  rf_sky.c  rf_sky.cpp  rf_sprite.c  rf_world.c
src/rmlui/: FileInterface.cpp  FileInterface.h  RenderInterface.cpp  RenderInterface.h  SystemInterface.cpp  SystemInterface.h
src/server/: sv_ccmds.c  sv_ccmds.cpp  sv_ents.c  sv_gameapi.cpp  sv_init.c  sv_init.cpp  sv_main.c  sv_main.cpp  sv_pmove.c  sv_send.cpp  sv_user.cpp  sv_world.c
src/shared/: byteswap.cpp  infostrings.cpp  m_bounds.cpp  m_flash.cpp  m_mat3.cpp  m_mat4.cpp  m_plane.cpp  mathlib.cpp  mersennetwister.cpp  shared.cpp  shared.h  string.cpp
src/unix/: sdl_main.c  sdl_main.h  unix_console.c  unix_glimp.c  unix_glimp.h  unix_local.h  unix_main.c  unix_main.cpp  unix_snd_cd.cpp  unix_snd_main.c  unix_snd_sdl.c  unix_udp.c  unix_udp.cpp  x11_main.c
src/win32/: win_console.c  win_console.cpp  win_local.h  win_main.c  win_main.cpp  win_snd_cd.c  win_snd_cd.cpp  win_sock.c  win_sock.cpp
